# target_estimation

./: CMakeLists.txt  README.md  package.xml
bag_files/: ball.bag  ball_1.bag  du_keyboard.bag  single_keyboard_test.bag  single_keyboard_tf_2021-09-09.bag  single_target_2021-10-12.bag
config/: kf_projectile_params_50hz.yaml  kf_rpy_ext_params_1000hz.yaml  kf_rpy_ext_params_50hz.yaml  kf_rpy_params_1000hz.yaml  kf_rpy_params_100hz.yaml  kf_rpy_params_3hz.yaml  kf_rpy_params_50hz.yaml  kf_rpy_params_50hz_version_2021-11-03.yaml
config/rviz/: target_node_rviz_config.rviz
config/rviz_conf/: multi_target_node_rviz_congif_test20210915.rviz  target_node_rviz_congif.rviz
include/target_estimation/: geometry.hpp  intersection_solver.hpp  kalman.hpp  publisher_franka.h  solver.hpp  target.hpp  target_c.h  target_interface.hpp  target_manager.hpp  target_manager_c.h  target_manager_ros.hpp  utils.hpp
include/target_estimation/types/: angular_rates.hpp  angular_velocities.hpp  projectile.hpp  rpy.hpp  rpyext.hpp  uam.hpp  uniform_acceleration.hpp  uniform_velocity.hpp  uniformly_accelerated.hpp
launch/: debug_launch.launch  followme_filtering_node.launch  gazebo.launch  multi_target_node.launch  single_target.launch  target_estimation.launch  target_node.launch  target_node_bringup.launch  target_node_debug.launch  target_node_spawn.launch
matlab/: compute_cov_mat.m  compute_cov_mat_projectile.m  compute_cov_mat_v2.m  generateExamples.m  generateModel.m  gradientDescent.m  matlab2yaml.m  model2yaml.m  orientation_match_test.m  plot_target_manager_test.m  plot_target_node_test.m  projectile.m  rpy.m  velocity_match.m
models/: kf_projectile_params_50hz.yaml  kf_rpy_ext_params_50hz.yaml  kf_rpy_params_100hz.yaml  kf_rpy_params_3hz.yaml  kf_rpy_params_50hz.yaml  kf_uam_params_50hz.yaml  model_angular_rates_params.yaml  model_angular_velocities_params.yaml  model_projectile_params.yaml  model_uniform_acceleration_params.yaml  model_uniform_velocity_params.yaml
msg/: TargetEstimation.msg
plotjuggler/: kalman.xml
rviz/: target_node.rviz
src/: intersection_solver.cpp  kalman.cpp  publisher_franka.cpp  solver.cpp  target.cpp  target_c.cpp  target_interface.cpp  target_manager.cpp  target_manager_c.cpp  target_manager_ros.cpp  target_node.cpp
src/types/: angular_rates.cpp  angular_velocities.cpp  projectile.cpp  rpy.cpp  rpyext.cpp  uam.cpp  uniform_acceleration.cpp  uniform_velocity.cpp  uniformly_accelerated.cpp
test/: avg_filter_test.cpp  followme_filtering_node.cpp  geometry_test.cpp  multi_target_node.cpp  orientation_match_test.cpp  send_estimation_franka_ep_node.cpp  send_target_franka_node.cpp  target_estimation_franka_node.cpp  target_manager_test.cpp  target_manager_test.test  target_node.cpp  test_multiple_targets.bag
worlds/: space.world
