<?xml version="1.0"?>
<package format="2">
  <name>target_estimation</name>
  <version>0.0.0</version>
  <description>The target_estimation package</description>

  <maintainer email="graiola@todo.todo">graiola</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rt_logger</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
