<?xml version="1.0"?>
<package format="2">
  <name>target_estimation</name>
  <version>0.0.1</version>
  <description>The target_estimation package</description>
  <maintainer email="gennaro.raiola@gmail.com">TODO</maintainer>
  <author>Gennaro Raiola</author>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rt_logger</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
